Fixed spacing after rebuke photo on index.html

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -48,7 +48,7 @@
    left: 0;
    background: #161616;
    z-index: 1;
-   opacity: 0.75;
+   opacity: 0.5;
  }
 
  .header-content {
@@ -63,28 +63,14 @@
   font-size:1.5rem;
   display: block;
   padding-bottom: 1rem;
+  
 }
 
 .header-image {
-  max-width: 85%;
+  max-width: 100%;
   height: auto;
   padding-top: 8rem;
-  opacity: 0.2;
-}
-
-.btn {
-  background: #161616;
-  color: #fff;
-  font-size: 1.2rem;
-  padding: 1rem 2rem;
-  text-decoration: none;
-}
-
-
-
-#mainNav {
-  min-height: 56px;
-  background-color: #161616;
+  opacity: 0.1;
 }
 
 #mainNav .navbar-toggler {
